fix icon so it stays aligned with the text

--- a/app/assets/stylesheets/cfa_ui_components/base/links.css
+++ b/app/assets/stylesheets/cfa_ui_components/base/links.css
@@ -1,5 +1,5 @@
 a:not(.btn) {
-  @apply inline-flex w-fit items-center gap-cfa-xsm border-link-unvisited text-link-unvisited underline;
+  @apply inline w-fit border-link-unvisited text-link-unvisited underline;
 }
 
 a:not(.btn):hover {
@@ -12,4 +12,8 @@ a:not(.btn):visited {
 
 a:not(.btn):focus-visible {
   @apply rounded-sm outline-2 outline-offset-2 outline-focus;
+}
+
+a:not(.btn) .link__icon {
+  @apply ml-0.5 inline-block align-text-bottom;
 }
